# HMC_TruncatedGaussian

./: README.md  pyproject.toml
hmc_truncated_gaussian/: __init__.py  hmc_tmg.py
