[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hmc-truncated-gaussian"
version = "0.1.0"
description = "Modernized HMC sampler for truncated multivariate Gaussians"
authors = [
    { name = "Paul Tune" },
    { name = "Roman Pearah" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=2.0"]

[project.urls]
Repository = "https://github.com/neverfox/HMC_TruncatedGaussian"
